--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
 <body>
 <div id="navcontainer">
     <div id="nav">
-        <div class="title"><h1>HOO+MAN | CONTACT</h1></div>
+        <div class="title"><h1>HOO<span style="color: gold">+</span>MAN | CONTACT</h1></div>
     <div class="links">
         <ul>
                 <li><a href="index.html">HOME</a></li>
