--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <div id="navcontainer">
     <div id="nav">
-        <div class="title"><h1>HOO+MAN</h1></div>
+        <div class="title"><h1>HOO<span style="color: gold">+</span>MAN</h1></div>
     <div class="links">
         <ul>
                 <li><a href="index.html">HOME</a></li>
